--- a/Index.html
+++ b/Index.html
@@ -79,7 +79,7 @@
                 Please check terminal details of your flight before leaving for the airport.
            </div>
         </section>   
-        <div class="Im">I Am Here For...</div>
+        <div class="Im">I Am Here For you...</div>
         <div>
             <img src="img/dealshome.png">
             <img src="img/covid.png">
