--- a/index.html
+++ b/index.html
@@ -172,8 +172,115 @@
             </div>
              </div>
         </section>
+        <section class="Plan">
+            <div class="page-base">
+                <div class="travel">
+                    <h2>Plan Your Travel</h2>
+                        <div class="p1">
+                            <h3>Group Travel</h3>
+                            <span>Enjoy the benefits of group bookings of SpiceJet</span>
+                        </div>
+                        <div class="p2">
+                            <h3> SME Flyer</h3>
+                            <span>Designed to power small & medium enterprises</span>
+                        </div>
+                        <div class="p3"> 
+                            <h3>Corporate Traveler</h3>
+                            <span>Corporate benefits programs that addresses the business traveller's needs.</span>
+                        </div>
+                </div>
+            </div>
+        </section>
+        <section class="loyal">
+            <div class="page-base">
+                <h2>SpiceClub loyalty program</h2>
+                <div class="maindiv">
+                    <div class="access">
+                        <img src="img/spiceclub.png"><div>Join our frequent flyer program and enjoy<br>
+                         unmatched rewards, added comforts and <br>
+                         exclusive privileges</div>
+                         <button>Know More</button>
+                    </div>  
+                    <div class="member">
+                    <h3>As a member you get Access to</h3>
+                        <div class="voucher">  
+                            <div> <img src="img/freevoucher.png"><span>Free Flight Vouchers</span></div>
+                            <div>  <img src="img/rewards.png"><span>Earn Sc points</span></div>
+                            <div>  <img src="img/privileges.png"><span>Complimentary Upgrades</span></div>
+                        </div>  
+                        <div class="btn"><button>Join SpiceClub</button></div>  
+                    </div>     
+                </div>        
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="page-base">
+            <div class="call">
+                <section>
+                    <div class="head">About us</div>
+                    <div class="hr">
+                     <a href="#">Corporate Overview</a>
+                    <a href="#">Fleet</a>
+                    <a href="#">Charter Request</a>
+                    <a href="#">Careers</a>
+                    <a href="#">Media center</a>
+                    <a href="#">Tariffs</a>
+                </div>
+                </section>
+                <section>
+                    <div class="head">Contact us</div>
+                    <div class="hr">
+                        <a href="#">Airpots</a>
+                        <a href="#">International offices</a>
+                        <a href="#">Corporate head office</a>
+                        <a href="#">Advertise with us</a>
+                        <a href="#">RFP</a>
+                    </div>
+                </section>
+                <section>
+                    <div class="head">Travel Info</div>
+                    <div class="hr">
+                    <a href="#">SpiceScreen</a>
+                    <a href="#">Citizen's Charter</a>
+                    <a href="#">FAQ</a>
+                    <a href="#">Special Assitance</a>
+                    <a href="#">Fitness to Fly Guidline</a>
+                    <a href="#">Flight Schedules</a>
+                    <a href="#">Terms of Carriage</a>
+                    <a href="#">Know your rights</a>
+                    <a href="#">Covid Related Information</a>
+                    <a href="#">Track your Bag</a>
+                    </div>
+                </section>
+                <section>
+                    <div class="head">Investors</div>
+                    <div class="hr">
+                    <a href="#">Corporate Governance</a>
+                    <a href="#">Financial Information</a>
+                    <a href="#">Notices</a>
+                    <a href="#">Corporate Announcements</a>
+                    <a href="#">Shareholding Pattern</a>
+                    </div>
+                </section>
+                <section>
+                    <div class="head">Spice Route Magazine</div>
+                    <div class="hr">
+                    <a href="#">March 2020</a>
+                    <a href="#">February 2020</a>
+                    <a href="#">January 2020</a>
+                    <a href="#">December 2019</a>
+                    <a href="#">November 2019</a>
+                    <a href="#">October 2019</a>
+                    </div>
+                </section>
+                <section>
+                    <div class="head">Connect with us</div>
+                        <a href="#"><img src="img/whatsappchat.png"></a>
+                </section>
+            </div>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script>
